--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "juliabox",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Responsive, mobile ready lightbox",
-  "main": "gulpfile.js",
+  "main": "dist/js/julia-box.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
