--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "juliabox",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Responsive, mobile ready lightbox",
   "main": "dist/js/julia-box.js",
   "scripts": {
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/prochor666/julia-box/issues"
   },
-  "homepage": "https://github.com/prochor666/julia-box#readme"
+  "homepage": "https://github.com/prochor666/julia-box#readme",
+  "dependencies": {
+    "jquery": ">=1.7.2"
+  }
 }
