img added in src, version update

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "juliabox",
-  "version": "0.5.0",
+  "version": "0.5.1,
   "description": "Responsive, mobile ready lightbox",
   "main": "dist/js/julia-box.js",
   "scripts": {
