Fixed z-index behavior

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         {
             "name": "Jan Prochazka",
             "email": "prochor666@gmail.com",
-            "homepage": "http://multizone.cz",
+            "homepage": "https://multizone.cz",
             "role": "Developer"
         }
     ]
